packages/ses/test/error/issue-2941/test2/error-trapping-none.js
/* global require */
// eslint-disable-next-line import/no-extraneous-dependencies
require('ses');

lockdown({
  errorTaming: 'unsafe',
  stackFiltering: 'verbose',
  errorTrapping: 'none',
});

throw Error(`Does this place have an
  echo?
  `);
